# saas-backend-core

./: .gitignore  README.md  pyproject.toml
backend_core/: __init__.py
backend_core/api/: __init__.py  client.py
backend_core/auth/: __init__.py  routes.py
backend_core/bigcommerce/: __init__.py  client.py
backend_core/credentials/: __init__.py  manager.py
backend_core/jwe/: __init__.py  refresh.py  tokenizer.py  validator.py
backend_core/mongo/: __init__.py  connection.py  repository.py
backend_core/saas_app/: __init__.py  client.py
