[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-core"
version = "1.0.0"
description = "Core backend package for SaaS applications - JWE, API, MongoDB, BigCommerce, Auth"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ajil Neopraxis", email = "team@neopraxis.com"}
]
keywords = ["saas", "backend", "jwe", "bigcommerce", "mongodb", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "motor>=3.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jwcrypto>=1.5.0",
    "httpx>=0.24.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/Ajil-Neopraxis/saas-backend-core"
Repository = "https://github.com/Ajil-Neopraxis/saas-backend-core"
